--- a/starWeibo/starWeibo/starweibo.Master
+++ b/starWeibo/starWeibo/starweibo.Master
@@ -12,6 +12,7 @@
 <body>
     <form id="form1" runat="server">
     <div>
+        test
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
