--- a/starWeibo/starWeibo/css/focus.css
+++ b/starWeibo/starWeibo/css/focus.css
@@ -11,7 +11,8 @@
 .FocusIn{width: 150px;display: inline-block;padding-top: 20px; padding-bottom: 10px;}
 .FocusLi{width: 150px;height: 30px; display: block; cursor: pointer; color: #333;}
 .FocusLi:hover{ background-color:#e6e6e6;}
-.Fotitle{text-align: center; font-weight: bold;line-height: 30px; font-size: 14px;}
+.Fotitle{text-align: center; font-weight: bold;line-height: 30px; font-size: 14px; background-color:#fff;}
+.Fanstitle{text-align: center; font-weight: bold;line-height: 30px; font-size: 14px;}
 .FoAllL{width:60px; font-size: 12px;font-weight: bold;line-height: 30px;float: left;padding-left: 20px;}
 .FoAllR{width: 30px; font-size: 12px;text-align: center; font-weight: bold;line-height: 30px;float: left;}
 .FocusLiL{font-size: 12px;text-align:left; line-height: 30px;float: left; padding-left: 20px; display: inline-block;}
@@ -20,7 +21,6 @@
 .Fans{width: 150px;min-height: 100px;  display: inline-block;padding-bottom: 10px;}
 /*主右*/
 .MainRight{ width: 770px; min-height:700px; display: inline-block; float:right; padding-right: 20px;}
-.FocusArea{ display: none;}
 .RightTop{width: 770px; height:25px; border-bottom: 2px solid #ea1429; padding-top: 25px;}
 .RTopLeft{ float: left; font-size: 14px;font-weight: bold;}
 .RTopRight{ float: left;font-size: 14px;}
@@ -79,6 +79,7 @@
 .FansLiRTop{width: 710px; height: 20px;}
 .FansName{font-size: 14px; font-weight:bold; cursor: pointer;}
 .FansName:hover{color:#0a8cd2;}
+.FansArea {display: none;}
 .FansAddress{font-size: 12px;}
 .FansLiRTopL{width:200px; height: 30px; float: left;}
 .FansLiRMid{width: 200px; height: 30px;}
@@ -86,8 +87,14 @@
 .FansInfoliL{ font-size: 12px;}
 .FansInfoliR{font-size: 14px;color:#0a8cd2; cursor: pointer;}
 .FansLiRBot{width: 100px;height: 30px; font-size: 12px;color:#0a8cd2; cursor: pointer; line-height:30px;}
-.FansLiRTopR{width: 400px;height: 30px; float:right;}
+.FansLiRTopR{width: 400px;height: 30px; float:right; position:relative;}
 .BtnFocusFans{width:60px;height:20px; border:1px solid #ccc; display:inline-block; font-size:12px; background-color:#f1f1f1;text-align:center; line-height:20px; border-radius:3px;cursor:pointer;}
 .BtnFocusFans:hover{background-color:rgb(255, 162, 16);color:#fff;}
-.DeleFans{ width:60px;height:20px; font-size:12px;line-height:20px; display:inline-block;color:#0a8cd2;cursor:pointer; border-right:1px solid #ddd;margin-left:20px;}
+.DeleFans,.ReportFans{ width:60px;height:20px; font-size:12px;line-height:20px; display:inline-block;color:#0a8cd2;cursor:pointer; border-right:1px solid #ddd;margin-left:20px;}
 .DeleFans:hover { text-decoration:underline; }
+.EnsureDeleFans {display:none; width:200px; height:120px; border:1px solid #ccc; position:absolute;top:-120px;left:90px;box-shadow:1px 1px 1px #ccc; background-color:#fff;border-radius:3px;}
+.EnsDeleFansTop {width:200px; height:60px; font-size:14px;line-height:60px;text-align:center; }
+.EnsDeleFansBot{width:180px;height:60px; padding-left:20px;}
+.EnsDeleFansBotBtn1{width: 60px;height: 30px; float: left; font-size: 14px; line-height: 30px; border-radius: 2px; border:1px solid #eee; text-align: center;margin-right: 10px;cursor: pointer; background-color:rgb(255, 162, 16); }
+.EnsDeleFansBotBtn2{width: 60px;height: 30px; float: left; font-size: 14px; line-height: 30px; border-radius: 2px; border:1px solid #eee; text-align: center;cursor: pointer;}
+.EnsDeleFansBotBtn1:hover,.EnsDeleFansBotBtn2:hover{background-image: -webkit-linear-gradient(top, rgb(255, 184, 71) 0%, rgb(255, 162, 16) 100%);}
