homePage do with static web

--- a/starWeibo/starWeibo/css/homePage.css
+++ b/starWeibo/starWeibo/css/homePage.css
@@ -10,50 +10,6 @@ textarea{resize:none;}
 p{display: block;-webkit-margin-before: 1em;-webkit-margin-after: 1em;-webkit-margin-start: 0px;-webkit-margin-end: 0px;}
 
 body{color: #333; background-color: #bee1f5;background-image: url("images/body.png");background-repeat: repeat-x;font: 12px/1.125 Arial,Helvetica,sans-serif;position: relative;}
-.mengban{width: 100%;height: 100%;background-color: #000;position: absolute;opacity: 0.6;display: none;z-index: 9998;}
-#blog{background-repeat: no-repeat;background-position: center 0;padding-top: 60px;background-image: url("images/bodybg.png");min-width: 980px;display: block;}
-.fb{background-image: url("images/footer.png");background-position: center bottom;background-repeat: no-repeat;display: block;}
-.gnbg{position: fixed;top: 2px;left: 0;z-index: 9999;width: 100%; height: 41px;background: url("images/bgline.png") repeat-x center 38px;}
-#top{position: fixed;top:0;left: 0;z-index: 9999;width: 100%;height: 39px;background: url("images/bgnav.png") repeat-x 0 0;box-shadow: 0px 1px 3px 0px #000;}
-#topbg{height: 41px; background-image: url("images/bgline.png") repeat-x center 38px;}
-#topmain{width: 980px;position: relative;margin: 0 auto;}
-.gnlogo{position: absolute;left: 0;top: 0;width: 190px;height: 39px;margin: 0px 0 0 -27px;}
-.box{width: 100%;height: 100%;margin: 1px 0 0 2px;overflow: hidden;}
-.logo{display: block;width: 100%;height: 100%;background: url("images/bgline.png") no-repeat -548px -4px;overflow: hidden;}
-.link{position: relative;display: block;width: 100%;height: 100%;margin: -39px 0 0;background: url("images/bgline.png") no-repeat -548px -45px;overflow: hidden;}
-
-.nav{display: inline-block;float: left;margin: 0 0 0 150px;}
-.toptitle{position: relative; float: left;font-size: 14px;}
-.topname{position: relative;display: inline-block; padding: 0 2px 0 0;color: #fff;line-height: 16px;cursor: pointer;}
-.toptitle .topname i{display: inline-block;padding: 11px 19px 11px 20px;font-style: normal;font-weight: normal;}
-.arrow{position: absolute;top: 17px;left: 45px; margin: 0 0 0 4px;display: inline-block;width: 10px;height: 10px;margin: 0 0 0 5px; overflow: hidden;vertical-align: top;font-style: 0;line-height: 0;}
-.arrow em{display: block;position: absolute;width: 0;margin: 0;border-width: 4px;border-style: solid;border-color: #fff transparent transparent transparent;overflow: hidden;font-family: "SimSun";}
-.topcontent{display: none;position: absolute; left: -70px;top: 28px;width: 588px;padding: 10px 20px 0 0;border-radius: 2px;box-shadow: 0 2px 2px rgba(0, 0, 0, .2);}
-.topcontent img{width: 588px; height: 228px;}
-
-.search{background: linear-gradient(to bottom, #f7f7f7 0%,#ededed 50%,#e6e6e6 100%);position: relative;float: left; width: 235px; height: 24px; margin: 7px 0 0 25px; display: inline-block;border-radius: 24px;}
-.sinput{outline: none; width: 193px;margin: 5px 0 0 10px;border: 0;background: none;color: #808080;vertical-align: top;}
-.searchbtn{display: inline-block;width: 20px;height: 20px;margin: 4px 0 0;background: url("images/bgline.png") no-repeat;background-position: -450px -6px;vertical-align: top;}
-.searchcontent{display: none;background-color: #fff; min-width: 232px;padding:5px 0 0; border:1px solid #333; position: absolute; top:23px; left: 0;margin: 3px 0 0;border-radius: 2px;box-shadow: 0 2px 2px rgba(0, 0, 0, .2);font-size: 12px;}
-.searchcontent a{ width: 192px; *width: 232px; height: 14px; *height: 22px; display: block; padding: 4px 20px; color: rgb(51, 51, 51); line-height: 13.5px;}
-.searchcontent .stitle{height: 14px;padding: 4px 20px;overflow: hidden;cursor: pointer;white-space: nowrap;color: #0078b6;}
-.searchcontent .currentsc{background-color: #e6e6e6;}
-
-.person{float: right; display: block;}
-.gnsetting{float: left; max-width: 95px;position: relative;}
-.gnsetting span{width: 16px; height: 16px;line-height: 37px; display: block; background-image: url("images/bgline.png"); background-repeat: no-repeat;overflow: hidden;text-indent: -999px;}
-.ptitle{display: inline-block;max-width: 75px;height: 38px;padding: 0 10px;overflow: hidden;line-height: 37px;white-space: nowrap;text-overflow: ellipsis;color: #fff;}
-.ptitle2,.ptitle1{color: #fff; display: block;position: relative;z-index: 9999;width: 30px;height: 27px;padding: 11px 0 0 12px;color: #fff;}
-.ptspan1{background-position: -225px -6px;}
-.ptspan2{background-position: -275px -6px;}
-.ptspan3{background-position: -350px -6px;}
-.ptspan4{background-position: -400px -6px;}
-.pscontent{display: none; z-index: 9998;padding: 5px 0 0;border: 1px solid #333;background: #fff;font-size: 12px;position:absolute; right: -1px;top: 35px;width: 150px;color: #333;border-top-left-radius: 2px;border-bottom-left-radius: 2px;border-bottom-right-radius: 2px;box-shadow: 0 2px 2px rgba(0, 0, 0, .2);}
-.pscontent ul{border-bottom: 1px solid #e6e6e6;}
-.pscontent li{height: 26px;line-height: 26px;}
-.pscontent .sli{height: 32px;padding: 0 15px;background: #f2f2f2;line-height: 32px;}
-.pscontent li a{display: block;padding: 0 15px;white-space: nowrap;color: #333;}
-.pscontent li .special{color: #0a8cd2;}
 
 #wmain{background-image: url("images/wmain.png");background-repeat: repeat-y;margin: 0 auto;width: 980px;display: block;}
 .wmainbg{background-image: none;padding: 0 0 20px;}
@@ -97,11 +53,11 @@ em{font-style: normal;font-weight: normal;}
 .lev3 a{display: block;height: 21px;line-height: 23px;font-size: 12px;padding: 0 0 0 4px;text-decoration: none;margin: 3px 8px 2px 0;}
 .func1 img{height: 16px;width: 16px;margin: 3px 10px 0 6px;vertical-align: -4px;}
 
-.wmaina{float: left;width: 830px;overflow: hidden;display: block;}
+.wmaina{width: 830px;overflow: hidden;display: block;background-color: #fff; margin: auto; }
 .wmainc{padding: 28px 0 30px;float: left;display: block; width: 600px;min-height: 800px;overflow: hidden;}
 .sendweibo{padding: 0 20px 11px;}
 .titlearea{height: 24px;overflow: hidden;clear: both;display: block;}
-.title{background-position: 0 0;background-image: url("images/alliconbtn.png");text-indent: -9999em;outline-style: none;font: normal 20px/24px Tahoma;float: left;width: 224px;height: 24px;}
+.title{background-position: 0 0;background-image: url("images/all_iconbtn.png");text-indent: -9999em;outline-style: none;font: normal 20px/24px Tahoma;float: left;width: 224px;height: 24px;}
 .num{float: right;height: 22px;line-height: 19px;display: none;}
 .num .txt2{text-decoration: none;cursor: default;}
 .num span{font-weight: 700;font-size: 22px;font-style: italic;font-family: Constantia, Georgia;}
@@ -121,7 +77,7 @@ em{font-style: normal;font-weight: normal;}
 .txt3{color: #aeaeae;}
 .kinddetail{float: left;padding:0;}
 .kinddetail a{float: left;width: auto;height: 16px;margin: 0 14px 0 0;text-align: left;font-size: 12px;line-height: 16px;}
-.wico16{display: inline-block;width: 16px;height: 16px;background-image: url("images/icon.png");background-repeat:no-repeat;}
+.wico16{display: inline-block;width: 16px;height: 16px;background-image: url("images/icon.png");background-position:no-repeat;}
 .icoswface{background-position: -275px 0px;}
 .icoswimg{background-position: -275px -25px;}
 .icoswmovie{background-position: -275px -50px;}
@@ -149,7 +105,7 @@ em{font-style: normal;font-weight: normal;}
 .groupread{margin:0 20px 11px;clear: both;}
 .groupread .sort{border-bottom: 2px solid #ea1429;}
 .sort .item{float: left;}
-.sort .current{font-weight: bold;}
+.sort .homePageCurrent{font-weight: bold;}
 .itemlink{display: block;padding: 0 10px;line-height: 30px;font-size: 14px;}
 .wtabarrow{position: relative;top: 2px;display: block;width: 44px;height: 8px;margin: -6px auto 0;background-image: url("images/icon.png");background-position: -500px -75px;font-size: 0;}
 .bg4{background-color: #fafafa;}
@@ -162,7 +118,7 @@ em{font-style: normal;font-weight: normal;}
 .wvline{float: left;line-height: 20px;color: #999;}
 .btnarr{float: left;width: 13px;height: 20px;}
 .inputsearch .warrow{margin: 8px 0 0 5px;color: #999;cursor: pointer;}
-.noborder{outline: none; border: none;background: transparent;height: 16px;padding: 2px 0;width: 124px;line-height: 18px;color: gray;}
+.noborder{outline: none; border: none;background: transparent;height: 16px;padding: 2px 0;width: 124px;height: 20px; line-height: 18px;color: gray;}
 .groupread .rightitem{float: right;margin-left: 5px;margin-top: -12px;}
 .wbtnround2{position: relative;z-index: 3;border-color: #d9d9d9;background-color: #f2f2f2;display: inline-block;border-width: 1px;border-style: solid;overflow: hidden;vertical-align: middle;cursor: pointer;border-radius: 13px;}
 
@@ -327,8 +283,8 @@ dd {display: block;-webkit-margin-start: 40px;}
 .righttab .title1{text-decoration: none;height: 18px;overflow: hidden;display: block;zoom: 1;display: inline;font-size: 14px;}
 .righttab .wtabarrow{height: 7px;overflow: hidden;width: 30px;}
 .currentli .wtabarrow{display: block;}
-.wtabarrow{margin-top: 2px; background-position: -410px 0;background-image: url("images/alliconbtn.png");background-repeat: no-repeat;}
-.righttab .line{font-size: 14px;margin: 0 10px;}
+/*.wtabarrow{margin-top: 2px; background-position: -410px 0;background-image: url("images/all_iconbtn.png");background-repeat: no-repeat;}
+*/.righttab .line{font-size: 14px;margin: 0 10px;}
 .line2c{color: #e6e6e6;}
 .righttab .btns4{margin-top: 12px;float: right;padding-right: 20px;margin-bottom: -5px;}
 .btns4 a{margin-left: 5px;vertical-align: middle;width: 22px;height: 22px;}
