--- a/starWeibo/starWeibo/skin/css/change1.css
+++ b/starWeibo/starWeibo/skin/css/change1.css
@@ -8,6 +8,7 @@ body{background-image: url("../images/change1/body_bg.jpg");background-repeat: n
 
 .gn_name:hover{background-color: #71285f;}
 .bianhei:hover{background-color: #71285f;}
+.gn_title:hover{background-color:#71285f;}
 .current{background-color:#71285f;color: #fff; }
 
 
