--- a/starWeibo/starWeibo/css/focus.css
+++ b/starWeibo/starWeibo/css/focus.css
@@ -28,7 +28,7 @@
 .FocusList{width: 770px;display:inline-block;min-height: 30px; padding-top: 20px;}
 .FocusCard{ width: 230px; height: 100px; border: 2px solid #f3f3f3; border-radius: 3px; cursor: pointer; padding: 8px; float: left; margin-right: 6px; margin-top: 10px; box-shadow: 1px 1px 1px 1px #ddd; position: relative;}
 .FocusCard:hover{ border: 2px solid #f48c12;}
-.GroupCard{display: none;width: 300px;border: 1px solid #ccc; border-radius: 3px; background-color:#fff; position: absolute; top: 60px;padding: 10px; padding-bottom:20px;}
+.GroupCard{display: none;width: 300px;border: 1px solid #ccc; border-radius: 3px; background-color:#fff; position: absolute; top: 60px;padding: 10px; padding-bottom:20px; z-index:100;}
 .GroupCardT{width: 300px;height: 20px; font-size: 12px;}
 .GroupCardM{width: 300px;display: inline-block;}
 .GroupCardMLi{width: 140px; height: 20px;display: block;float: left; margin-top: 5px;}
@@ -40,7 +40,7 @@
 .FocusCardS{ width: 230px;height:60px; }
 .HeadImg{width: 50px; height: 50px; float: left;}
 .FCardinfo{width: 170px; height: 50px;background-color: #fff;padding-left: 10px; float: left;}
-.FCardName{width: 170px;display: block;font-size: 12px; height: 17px; float:left;}
+.FCardName{width: 170px;display: block;font-size: 12px; height: 17px; float:left; font-weight:bold}
 .FCardName:hover{color:#6cbae4;}
 .FCardRelation{width: 170px;display: block; font-size: 12px; height: 17px;float: left;}
 .FCardGroup{width: 70px;display: block;font-size: 12px;height: 17px;float: right; color:#6cbae4; float: left;}
