视图更新，css添加

--- a/starWeibo/starWeibo/css/homePage.css
+++ b/starWeibo/starWeibo/css/homePage.css
@@ -179,7 +179,7 @@ em{font-style: normal;font-weight: normal;}
 .func3{color: #333;text-decoration: none;}
 .wbmediaexpand .wbtext{font-size: 12px;line-height: 21px;padding: 4px 0 4px;}
 .wbtnc .wbtnicon{float: left;}
-.wbtnicon .wico12{width: 14px;,margin: 3px 0 0 0;}
+.wbtnicon .wico12{width: 14px;margin: 3px 0 0 0;}
 .wvline{margin: 0 4px 0 0;}
 .wbtnc .wautocut{display: inline-block;max-width: 110px;}
 .bg1{background-color: #f2f2f2;}
