--- a/starWeibo/starWeibo/css/focus.css
+++ b/starWeibo/starWeibo/css/focus.css
@@ -11,9 +11,10 @@
 .FocusIn{width: 150px;display: inline-block;padding-top: 20px; padding-bottom: 10px;}
 .FocusLi{width: 150px;height: 30px; display: block; cursor: pointer; color: #333; text-align:center; line-height:30px; font-size:12px;}
 .FocusLi:hover{ background-color:#e6e6e6;}
-.Fotitle{text-align: center; font-weight: bold;line-height: 30px; font-size: 14px; background-color:#fff;}
+.Fotitle{text-align: center; font-weight: bold;line-height: 30px; font-size: 14px;cursor:pointer;}
 .Fanstitle{text-align: center; font-weight: bold;line-height: 30px; font-size: 14px;}
-.FoAllL{width:60px; font-size: 12px;font-weight: bold;line-height: 30px;float: left;padding-left: 20px;}
+.FoAll,.FansAll{width: 150px;height: 30px; display: block; cursor:pointer;}
+.FoAllL{width:60px; font-size: 12px;font-weight: bold;line-height: 30px;float: left;padding-left: 30px;}
 .FoAllR{width: 30px; font-size: 12px;text-align: center; font-weight: bold;line-height: 30px;float: left;}
 .FocusLiL{font-size: 12px;text-align:left; line-height: 30px;float: left; padding-left:40px; display: inline-block;}
 .CreateGroup{width:80px; font-size: 12px;line-height: 20px;float: left;border: 1px solid #ccc; height: 20px; text-align: center; margin-left:20px;cursor: pointer;}
