--- a/starWeibo/starWeibo/css/personalCenter.css
+++ b/starWeibo/starWeibo/css/personalCenter.css
@@ -4,18 +4,17 @@ img{ border: 0px; }
 a{ text-decoration: none; cursor: pointer; color: #0a8cd2;}
 ul,li{ list-style: none; list-style-position: outside; }
 
-.S_profile{ background-color: #bee1f5; background-image: url("images/body_repeat.png"); background-repeat: repeat-x;}
-.W_miniblog { min-width: 980px; min-height: 300px; background-repeat: no-repeat; background-position: center 0; background-image: url("images/body_bg.png");}
-#pl_common_top{ width: 100%; height: 41px; background-color: #666; text-align: center; line-height: 41px; color: #fff; font-weight: bold; font-size: 30px; z-index: 9999; position: fixed;}
+.maintitle{ z-index:9999;}
+.W_main{ padding-top:0;}
 #main{ width: 980px; margin: 0 auto; padding-top: 40px; background-color: #ffffff;}
 
 /************header区*************/
 .header{ width: 100%; color: #333;}
-.headerPic{ height: 300px; position: relative; background-image: url("images/headerTopPic.jpg"); background-position: center bottom; background-repeat: no-repeat; }
+.headerPic{ height: 300px; position: relative; background-image: url("images/personalCenterimages/headerTopPic.jpg"); background-position: center bottom; background-repeat: no-repeat; }
 .pf_use_num{ position: absolute; height: 22px; padding: 0 8px; line-height: 20px; color: #e7e4e4; background-image: url(""); background-repeat: repeat; background: rgba(0,0,0,0.25); _background: #333; border-radius: 10px; right: 46px; top: 11px; visibility: hidden;}
 .pf_use_num_display{ visibility: visible;}
-.templete_enter a{ background: url("images/icon.png") no-repeat -477px 0px; display: block; width: 23px; height: 24px; position: absolute; right: 0px; top: 0px;}
-.templete_enter a:hover{ background: url("images/icon.png") no-repeat -477px -25px;}
+.templete_enter a{ background: url("images/personalCenterimages/icon.png") no-repeat -477px 0px; display: block; width: 23px; height: 24px; position: absolute; right: 0px; top: 0px;}
+.templete_enter a:hover{ background: url("images/personalCenterimages/icon.png") no-repeat -477px -25px;}
 .profile_top{ position: relative; padding-bottom: 15px; }
 .pf_info{ margin-left: 225px; line-height: 22px; padding-top: 10px; position: relative;}
 .clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
@@ -26,7 +25,7 @@ ul,li{ list-style: none; list-style-position: outside; }
 .pf_intro a{ color: #0a8cd2;}
 .pf_intro a:hover{ text-decoration: underline;}
 .W_ico12{ width: 13px; height: 15px; display: inline-block; vertical-align: -2px;}
-.male{ background-image: url("images/bg_line.png"); background-position: 0 -3px; background-repeat: no-repeat;}
+.male{ background-image: url("images/personalCenterimages/bg_line.png"); background-position: 0 -3px; background-repeat: no-repeat;}
 .W_vline{ margin: 0 9px 0 5px;}
 .S_line1_c{ color: #d9d9d9;}
 .city{ color: #0a8cd2;}
@@ -76,17 +75,18 @@ ul,li{ list-style: none; list-style-position: outside; }
 .pf_item .label { float: left; width: 53px; text-align: right; white-space: nowrap; }
 .S_txt2{ color: #808080; }
 .pf_item .con { margin-left: 67px; padding: 0 10px; word-wrap: break-word; }
-.W_ico16{ display: inline-block; width: 16px; height: 16px; background: url("images/icon.png") no-repeat -75px -150px; vertical-align: middle;}
-.W_ico16:hover{ background: url("images/icon.png") no-repeat -100px -150px;}
+.W_ico16{ display: inline-block; width: 16px; height: 16px; background: url("images/personalCenterimages/icon.png") no-repeat -75px -150px; vertical-align: middle;}
+.W_ico16:hover{ background: url("images/personalCenterimages/icon.png") no-repeat -100px -150px;}
 .W_error{ color: #f00;}
 .W_input { width: 195px; border: 1px solid #ccc; border-radius: 2px; height: 28px; padding: 0 0 0 2px; vertical-align: middle; color: #808080; -webkit-box-shadow: 0px 1px 1px 0px #eaeaea inset; -moz-box-shadow: 0px 1px 1px 0px #eaeaea inset; box-shadow: 0px 1px 1px 0px #eaeaea inset; outline-style: none;}
 .status{ position: absolute; left: 290px; top: 1px;}
 .W_tips { font-size: 12px; overflow: hidden; padding: 5px 7px 4px 10px; _width: auto;}
 .W_tips .icon { float: left; width: 16px; margin-right: 3px; _margin-right: 0; vertical-align: -3px; }
 .tips_del{ border: 1px solid #FFD9BB; background: #FFF7F5; line-height: 12px; color: #666; }
-.icon_delS,.icon_succS{ width: 16px; height: 16px; background: url("images/ico_warn.png"); margin: 0 3px 0 0; overflow: hidden; display: inline-block;}
+.icon_delS,.icon_succS{ width: 16px; height: 16px; background: url("images/personalCenterimages/ico_warn.png"); margin: 0 3px 0 0; overflow: hidden; display: inline-block;}
 .icon_delS{ background-position: 0 -50px; }
 .icon_succS{ background-position: 0 0; }
 .pf_item .rsp { margin-right: 10px; }
 .W_radio { vertical-align: -2px; _vertical-align: -3px; margin-right: 3px; }
 textarea.W_input { height: 44px; line-height: 22px; overflow-y: auto; overflow-x: hidden; padding: 5px 0 0 2px; border: 1px solid #ccc; border-radius: 2px; vertical-align: middle; color: #808080; -webkit-box-shadow: 0px 1px 1px 0px #eaeaea inset; -moz-box-shadow: 0px 1px 1px 0px #eaeaea inset; box-shadow: 0px 1px 1px 0px #eaeaea inset; resize: none;}
+.con a{ color:#0a8cd2; vertical-align: middle;}
